--- a/Codes/sentiment-chatbox/templates/index.html
+++ b/Codes/sentiment-chatbox/templates/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tweet Sentiment Analyzer </h1>
+        <h1 class="title">Tweet Sentiment Analyzer</h1>
+        
         <textarea id="userInput" placeholder="Type your tweet here..." rows="4"></textarea>
+        
         <button onclick="analyzeSentiment()">Analyze Sentiment</button>
+        
         <div id="loading" style="display: none;">Analyzing...</div>
         <div id="result"></div>
     </div>
